# byotrack

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  _check_version_deployed.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: deploy.yml  tests.yml
byotrack/: __init__.py  _env.py  example_data.py  parameters.py  tracker.py  tracks.py  utils.py  visualize.py
byotrack/api/: __init__.py  features_extractor.py  linker.py  parameters.py  refiner.py  tracker.py  tracking_graph.py  tracks.py
byotrack/api/detector/: detections.py  detector.py
byotrack/api/optical_flow/: optical_flow.py
byotrack/dataset/: ctc.py  sinetra.py
byotrack/detector/: base.py  detections.py  spot_detector.py
byotrack/fiji/: __init__.py  io.py  run.py  run_imagej.py
byotrack/icy/: __init__.py  io.py  run.py
byotrack/implementation/: __init__.py
byotrack/implementation/detector/: __init__.py  refiners.py  spot_detector.py  stardist.py  wavelet.py
byotrack/implementation/linker/: __init__.py
byotrack/implementation/linker/frame_by_frame/: base.py  greedy_lap.py  kalman_linker.py  koft.py  nearest_neighbor.py  trackabyo_linker.py  trackonstra.py
byotrack/implementation/linker/icy_emht/: __init__.py  emht_protocol_with_full_specs.xml  icy_emht.py
byotrack/implementation/linker/trackmate/: __init__.py  _trackmate.py  trackmate.py
byotrack/implementation/optical_flow/: opencv.py  skimage.py
byotrack/implementation/refiner/: __init__.py  cleaner.py  interpolater.py  propagation.py  smoother.py
byotrack/implementation/refiner/stitching/: __init__.py  dist_stitcher.py  emc2.py  tps_propagation.py
byotrack/linker/: base.py
byotrack/linker/icy_emht/: emht_protocol.xml  icy_emht.py
byotrack/metrics/: ctc.py
byotrack/refiner/: base.py  cleaner.py
byotrack/refiner/stitching/: dist_stitcher.py  emc2.py  tps_propatation.py
byotrack/video/: __init__.py  reader.py  transforms.py  video.py
docs/: README.md  requirements.txt
docs/source/: conf.py  fiji.rst  icy.rst  index.rst  install.rst  napari.rst  visualize.rst
docs/source/api/: detections.rst  detector.rst  linker.rst  optical_flow.rst  parameters.rst  refiner.rst  tracker.rst  tracks.rst  video.rst
docs/source/datasets/: ctc.rst  sinetra.rst
docs/source/implementation/detectors/: detection_refiners.rst  detectors.rst  spot_detector.rst  stardist.rst  wavelet.rst
docs/source/implementation/linkers/: frame_by_frame.rst  icy_emht.rst  kalman.rst  koft.rst  linkers.rst  nearest_neighbor.rst  trackmate.rst  trackonstra.rst
docs/source/implementation/optical_flows/: opencv.rst  optical_flows.rst  skimage.rst
docs/source/implementation/refiners/: cleaner.rst  dist_stitcher.rst  emc2.rst  interpolater.rst  propagation.rst  refiners.rst  smoother.rst
docs/source/metrics/: ctc.rst
docs/source/run_examples/: ByoTrack fundamental.ipynb  Detectors.ipynb  Linkers.ipynb  Video.ipynb
examples/: ByoTrack fundamental.ipynb  Detectors.ipynb  Linkers.ipynb  Video.ipynb
examples/ctc/: README.md  hyper_parameters.json  link.py  requirements.txt  run_clb.py
src/byotrack/: __init__.py  _env.py  example_data.py  utils.py  visualize.py
src/byotrack/api/: __init__.py  detector.py  features_extractor.py  linker.py  parameters.py  refiner.py  tracker.py  tracking_graph.py  tracks.py
src/byotrack/api/detections/: __init__.py  bbox_detections.py  detections.py  point_detections.py  segmentation_detections.py  statistics.py
src/byotrack/api/detector/: __init__.py  detections.py  detector.py
src/byotrack/api/optical_flow/: __init__.py  optical_flow.py
src/byotrack/dataset/: __init__.py  ctc.py  sinetra.py
src/byotrack/fiji/: __init__.py  io.py  run.py
src/byotrack/geff/: __init__.py  io.py
src/byotrack/icy/: __init__.py  io.py  run.py
src/byotrack/implementation/: __init__.py
src/byotrack/implementation/detector/: __init__.py  refiners.py  stardist.py  wavelet.py
src/byotrack/implementation/linker/: __init__.py
src/byotrack/implementation/linker/frame_by_frame/: __init__.py  base.py  greedy_lap.py  kalman_linker.py  koft.py  nearest_neighbor.py  trackonstra.py
src/byotrack/implementation/linker/icy_emht/: __init__.py  emht_protocol.xml  icy_emht.py
src/byotrack/implementation/linker/trackmate/: __init__.py  _trackmate.py  trackmate.py
src/byotrack/implementation/optical_flow/: __init__.py  opencv.py  skimage.py
src/byotrack/implementation/refiner/: __init__.py  cleaner.py  interpolater.py  propagation.py  smoother.py
src/byotrack/implementation/refiner/stitching/: __init__.py  dist_stitcher.py  emc2.py
src/byotrack/metrics/: __init__.py  ctc.py
src/byotrack/napari/: __init__.py  utils.py  viewer.py
src/byotrack/video/: __init__.py  reader.py  transforms.py  video.py
src/byotrack/video/preprocessor/: __init__.py  channel_projection.py  normalizer.py  preprocessor.py  registrator.py  slicer.py  spatial_projection.py
tests/: __init__.py  test_env.py  test_example_data.py  test_utils.py
tests/api/: __init__.py  test_detector.py  test_linker.py  test_optical_flow.py  test_tracker.py  test_tracking_graph.py  test_tracks.py
tests/api/detections/: __init__.py  conftest.py  test_bbox_detections.py  test_detections.py  test_point_detections.py  test_segmentation_detections.py  test_statistics.py
tests/dataset/: __init__.py  test_ctc.py  test_sinetra.py
tests/fiji/: __init__.py  conftest.py  test_io.py  test_run.py
tests/geff/: __init__.py  conftest.py  test_io.py
tests/icy/: __init__.py  conftest.py  test_io.py  test_run.py
tests/video/: __init__.py  conftest.py  test_preprocessors.py  test_readers.py  test_video.py
