[metadata]
name = byotrack
version = attr: byotrack.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Biological particle tracking with Python 
keywords = Tracking, biology, machine learning, statistics, optimization
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/byotrack
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numba
    numpy
    opencv-python
    pillow
    platformdirs
    pylapy[scipy]
    tifffile[all]
    torch
    torch-tps
    tqdm
include_package_data = False

[options.package_data]
* =
    py.typed
    emht_protocol*

[options.packages.find]
exclude=
    tests*


[options.extras_require]
full =
    matplotlib
    scikit-image
    stardist;python_version<'3.13'
    tensorflow;python_version<'3.13'
    torch-kf
    trackastra;python_version>='3.10'
